day3/configmap-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-pod
spec:
  containers:
    - name: busy
      image: busybox
      command: [ "/bin/sh", "-c", "env; while true; do sleep 3600; done"]
  restartPolicy: Never
