day3/configmap-vol-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-vol-pod
spec:
  volumes:
    - name: config
      configMap:
        name: my-configmap
  containers:
    - name: busy
      image: busybox
      command: [ "/bin/sh", "-c", "env; while true; do sleep 3600; done"]
      volumeMounts:
        - name: config
          mountPath: /config-data
  restartPolicy: Never
