day3/nfs-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nfs-pod
spec:
  nodeName: worker1
  containers:
  - image: nginx
    name: test-container
    volumeMounts:
    - mountPath: /my-nfs-data
      name: nfs-volume
  volumes:
  - name: nfs-volume
    nfs:
      server: 192.168.1.191
      path: /var/nfs
