day3/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: "cars.lab.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cars-svc
            port:
              number: 80
  - host: "flowers.lab.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flowers-svc
            port:
              number: 80
